--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.1.0",
+    "axios": "^0.26.1",
+    "jsdom": "^19.0.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
