--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@radix-ui/react-icons": "^1.1.0",
+    "@supabase/supabase-js": "^1.33.3",
     "axios": "^0.26.1",
     "jsdom": "^19.0.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/spotify-web-api-node": "^5.0.7",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
