--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@notionhq/client": "^1.0.4",
     "@radix-ui/react-icons": "^1.1.0",
     "@supabase/supabase-js": "^1.33.3",
     "axios": "^0.26.1",
