--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.26.1",
     "jsdom": "^19.0.0",
     "next": "12.1.4",
+    "prismjs": "^1.27.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "spotify-web-api-node": "^5.0.2"
@@ -27,6 +28,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/jsdom": "^16.2.14",
     "@types/node": "17.0.23",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/spotify-web-api-node": "^5.0.7",
