--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "axios": "^0.26.1",
     "jsdom": "^19.0.0",
     "next": "12.1.4",
+    "next-use-posthog": "^1.16.0",
     "prismjs": "^1.27.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "spotify-web-api-node": "^5.0.2",
-    "next-use-posthog": "^1.16.0"
+    "react-dom-confetti": "^0.2.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
