--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@notionhq/client": "^1.0.4",
     "@radix-ui/react-icons": "^1.2.0",
     "@supabase/supabase-js": "^1.33.3",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^0.26.1",
     "jsdom": "^19.0.0",
     "mapkit-react": "^1.4.0",
