--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@9gustin/react-notion-render": "^3.11.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -26,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
+    "react-twitter-widgets": "^1.11.0",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
